maybe final version

--- a/about_us.html
+++ b/about_us.html
@@ -51,7 +51,9 @@
                 <p>Hi! I'm Jaden, a junior student for Computer Science at CSU. I completed the first two years of my degree at UCCS but transferred this year to CSU so that I could become a member of T.A.J.J Inc.!</p>
             </div>
 
-            <footer style="color: black;">Created by Team 19</footer>
+
         </div>
     </body>
+    <footer style ="background-color:#333333; color:#E5EBFF;">&copy; 2024 T.A.J.J. Inc. All rights reserved.</footer>
+
 </html>
