--- a/printing.html
+++ b/printing.html
@@ -27,7 +27,7 @@
                     document.getElementById('grey-lower-table-container').innerHTML = lowerTableHtml;
                 };
             </script>
-            <footer>Created by Team 19</footer>
         </div>
     </body>
+    <footer>&copy; 2024 T.A.J.J. Inc. All rights reserved.</footer>
 </html>
