--- a/color_generation.html
+++ b/color_generation.html
@@ -18,13 +18,11 @@
         </nav>
 
         <div class="content">
-            <h1>T.A.J.J. Inc. Color Generation Product</h1>
+            <h1>The Color Gen<sub style = "font-size: 12.5px">by T.A.J.J. Inc. </sub></h1>
 
-            <p>Welcome to our Color Generation page! Here you can find our first team product, Color generation tables! By following the instructions below you will be able to generate two tables based on your needs!</p>
+            <p>By following the instructions below you will be able to generate two tables based on your needs!</p>
 
-            <p>
-                Enter two numbers separated by a space. The first in range 1-10, the second in range 1-26.
-            </p>
+            <p>Enter two numbers separated by a space. The first in range 1-10, the second in range 1-26.</p>
 
 
             <div style="padding-bottom: 10px;">
@@ -45,8 +43,7 @@
             <div id="bottom-table-container"></div>
 
             <button onclick="printingGraphs()">Print</button>
-
-            <footer>Created by Team 19</footer>
         </div>
     </body>
+    <footer>&copy; 2024 T.A.J.J. Inc. All rights reserved.</footer>
 </html>
